// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkspaceSelector Snapshots matches snapshot with basic configuration 1`] = `
<div
  class="ant-select ant-select-outlined sc-bRKDuR nYEyW css-dev-only-do-not-override-5rmn7t ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-wrap"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        Select workspace
      </span>
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="folder"
      class="anticon anticon-folder"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="folder"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 298.4H521L403.7 186.2a8.15 8.15 0 00-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32zM840 768H184V256h188.5l119.6 114.4H840V768z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`WorkspaceSelector Snapshots matches snapshot with selected workspace 1`] = `
<div
  class="ant-select ant-select-outlined sc-bRKDuR nYEyW css-dev-only-do-not-override-5rmn7t ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-wrap"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-item"
      >
        <div
          class="sc-eqYatC klwxXB"
        >
          <div
            class="sc-jwTyAe dTOIHx"
          >
            <span
              class="ant-avatar ant-avatar-circle css-dev-only-do-not-override-5rmn7t"
              style="width: 32px; height: 32px; font-size: 18px; background-color: var(--rescale-color-brand-blue);"
            >
              <span
                class="ant-avatar-string"
                style="-webkit-transform: scale(1); transform: scale(1);"
              >
                P
              </span>
            </span>
            <div
              class="sc-lgpSej huwmby"
            >
              <span
                aria-label="star"
                class="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="sc-lgpSej bLWIeG"
            >
              <span
                aria-label="lock"
                class="anticon anticon-lock"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="lock"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            class="sc-kcLKEh cNoyKQ"
          >
            Personal Workspace
          </span>
          <span
            class="sc-dntSTA cGtLQF"
          >
            Personal
          </span>
        </div>
      </span>
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="folder"
      class="anticon anticon-folder"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="folder"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 298.4H521L403.7 186.2a8.15 8.15 0 00-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32zM840 768H184V256h188.5l119.6 114.4H840V768z"
        />
      </svg>
    </span>
  </span>
</div>
`;
